--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "short_name": "DogsLife",
   "icons": [
     {
-      "src": "./Logo.png",
+      "src": "./Logo.png?v=2",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./Logo.png",
+      "src": "./Logo.png?v=2",
       "sizes": "512x512",
       "type": "image/png"
     }
